@@ -20,13 +20,13 @@ import java.security.Principal;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
+import java.util.StringJoiner;
 
 import javax.jcr.SimpleCredentials;
 import javax.security.auth.Subject;
 
-import org.apache.jackrabbit.guava.common.base.MoreObjects;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.api.AuthInfo;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -48,7 +48,7 @@ public final class AuthInfoImpl implements AuthInfo {
                         @Nullable Iterable<? extends Principal> principals) {
         this.userID = userID;
         this.attributes = (attributes == null) ? Collections.emptyMap() : attributes;
-        this.principals = (principals == null) ? Collections.emptySet() : ImmutableSet.copyOf(principals);
+        this.principals = (principals == null) ? Collections.emptySet() : Set.copyOf(CollectionUtils.toSet(principals));
     }
 
     public static AuthInfo createFromSubject(@NotNull Subject subject) {
@@ -64,10 +64,11 @@ public final class AuthInfoImpl implements AuthInfo {
 
     @Override
     public String toString() {
-        return MoreObjects.toStringHelper(this)
-            .add("userID", userID)
-            .add("attributes", attributes)
-            .add("principals", principals).toString();
+        return new StringJoiner(", ", AuthInfoImpl.class.getSimpleName() + "[", "]")
+                .add("userID=" + userID)
+                .add("attributes=" + attributes)
+                .add("principals=" + principals)
+                .toString();
     }
 
     //-----------------------------------------------------------< AuthInfo >---
